# Fillit

./: CMakeLists.txt  Makefile  README.md  author
input/: bad_test  invalid_sample.fillit  test
src/: check_figure.c  field.c  figures_top_left.c  file_checker.c  header.h  help.c  main.c  map.c  processfile.c  solver.c  width_height.c
